--- a/Styles&Themes/app/src/main/res/layout/activity_main.xml
+++ b/Styles&Themes/app/src/main/res/layout/activity_main.xml
@@ -1,9 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:ignore="MissingDefaultResource">
+    android:layout_height="match_parent">
 
     <FrameLayout
         android:id="@+id/frameLayout"
@@ -73,7 +71,7 @@
             android:hint="@string/enter_text_hint"
             android:inputType="text"
             android:textSize="16sp"
-            android:maxWidth="100dp"
+            android:maxWidth="300dp"
             android:autofillHints="name"/>
 
         <TextView
@@ -107,8 +105,8 @@
         <androidx.appcompat.widget.SwitchCompat
             android:id="@+id/boldSwitch"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/bold_text_switch"/>
+            android:layout_height="48dp"
+            android:text="@string/bold_text_switch"
+            android:padding="8dp"/>
     </LinearLayout>
-
 </RelativeLayout>
