--- a/Styles&Themes/app/src/main/res/layout-land/activity_main_landscape.xml
+++ b/Styles&Themes/app/src/main/res/layout-land/activity_main_landscape.xml
@@ -1,6 +1,9 @@
+<?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    tools:ignore="MissingDefaultResource">
 
     <FrameLayout
         android:id="@+id/frameLayout"
@@ -14,15 +17,16 @@
             android:id="@+id/frameImage"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:src="@drawable/your_image"/>
+            android:layout_gravity="center"
+            android:src="@drawable/your_image"
+            android:contentDescription="@string/image_description"/>
+
         <TextView
             android:id="@+id/frameText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
-            android:layout_centerHorizontal="true"
-            android:text="Placeholder"
+            android:layout_gravity="top|center_horizontal"
+            android:text="@string/placeholder_text"
             android:textColor="@color/textColor"
             android:textSize="16sp"/>
     </FrameLayout>
@@ -44,25 +48,31 @@
                 android:id="@+id/colorRed"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Red" />
+                android:text="@string/color_red_background"
+                android:contentDescription="@string/red_background_desc" />
             <RadioButton
                 android:id="@+id/colorBlue"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Blue" />
+                android:text="@string/color_blue_background"
+                android:contentDescription="@string/blue_background_desc" />
             <RadioButton
                 android:id="@+id/colorGreen"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Green" />
+                android:text="@string/color_green" />
         </RadioGroup>
 
         <EditText
             android:id="@+id/editText"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="Enter Text"
-            android:textSize="16sp"/>
+            android:layout_height="48dp"
+            android:hint="@string/enter_text_hint"
+            android:textSize="16sp"
+            android:inputType="text"
+            android:textColor="#FF000000"
+            android:textColorHint="#FF757575"
+            android:autofillHints="name"/>
 
         <RadioGroup
             android:id="@+id/textColorGroup"
@@ -74,24 +84,27 @@
                 android:id="@+id/textColorRed"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Red" />
+                android:text="@string/color_red_text"
+                android:contentDescription="@string/red_text_desc" />
             <RadioButton
                 android:id="@+id/textColorBlue"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Blue" />
+                android:text="@string/color_blue_text"
+                android:contentDescription="@string/blue_text_desc" />
             <RadioButton
-                android:id="@+id/textColorBlack"
+                android:id="@+id/textColorGreen"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Black" />
+                android:text="@string/color_green" />
         </RadioGroup>
 
         <androidx.appcompat.widget.SwitchCompat
             android:id="@+id/boldSwitch"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Bold Text"/>
+            android:layout_height="48dp"
+            android:text="@string/bold_text_switch"
+            android:padding="8dp"/>
     </LinearLayout>
 
 </RelativeLayout>
