--- a/Styles&Themes/app/src/main/res/values/colors.xml
+++ b/Styles&Themes/app/src/main/res/values/colors.xml
@@ -10,4 +10,5 @@
     <color name="red">#FF0000</color>
     <color name="blue">#0000FF</color>
     <color name="green">#00FF00</color>
+    <string name="frameBackground">#000000</string>
 </resources>
