--- a/Styles&Themes/app/src/main/res/values/styles.xml
+++ b/Styles&Themes/app/src/main/res/values/styles.xml
@@ -51,4 +51,8 @@
         <item name="android:textSize">14sp</item>
     </style>
 
+    <style name="StatusBarColor">
+        <item name="android:statusBarColor">@android:color/transparent</item>
+    </style>
+
 </resources>
