--- a/PlayStorePage/app/src/main/res/layout/item_review.xml
+++ b/PlayStorePage/app/src/main/res/layout/item_review.xml
@@ -9,34 +9,33 @@
         android:id="@+id/review_user"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="User Name"
+        android:text="@string/review_user_placeholder"
         android:textStyle="bold" />
 
     <TextView
         android:id="@+id/review_date"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Review Date"
+        android:text="@string/review_date_placeholder"
         android:textSize="12sp" />
 
     <TextView
         android:id="@+id/review_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Review Title"
+        android:text="@string/review_title_placeholder"
         android:textStyle="bold" />
 
     <TextView
         android:id="@+id/review_summary"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Review Summary" />
+        android:text="@string/review_summary_placeholder" />
 
-    <!-- Add review_rating TextView to display the rating -->
     <TextView
         android:id="@+id/review_rating"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Rating"
+        android:text="@string/review_rating_placeholder"
         android:textStyle="italic" />
 </LinearLayout>
