Finished week 4 I think?

--- a/Fragments/app/src/main/res/layout-land/fragment_administrator_form.xml
+++ b/Fragments/app/src/main/res/layout-land/fragment_administrator_form.xml
@@ -1,31 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:padding="16dp">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:padding="16dp">
 
     <EditText
         android:id="@+id/name_input"
-        style="@style/FormEditText"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:hint="@string/name_hint"
-        android:inputType="textPersonName" />
+        android:inputType="textPersonName"
+        android:autofillHints="name" />
 
     <EditText
         android:id="@+id/university_input"
-        style="@style/FormEditText"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:hint="@string/university_hint"
-        android:inputType="text" />
+        android:inputType="text"
+        android:autofillHints="organization" />
 
     <EditText
         android:id="@+id/id_input"
-        style="@style/FormEditText"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:hint="@string/id_hint"
-        android:inputType="text" />
+        android:inputType="text"
+        android:autofillHints="username" />
 
     <EditText
         android:id="@+id/program_input"
-        style="@style/FormEditText"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:hint="@string/program_hint"
         android:inputType="text" />
 
@@ -37,5 +44,4 @@
         android:layout_marginTop="16dp"
         android:text="@string/submit"
         android:textSize="16sp" />
-
-</FrameLayout>
+</LinearLayout>
