--- a/Fragments/app/src/main/res/layout-land/fragment_student_form.xml
+++ b/Fragments/app/src/main/res/layout-land/fragment_student_form.xml
@@ -1,34 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:padding="16dp">
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:padding="16dp"
+    tools:ignore="MissingDefaultResource">
 
     <EditText
         android:id="@+id/name_input"
-        style="@style/FormEditText"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:hint="@string/name_hint"
         android:inputType="textPersonName"
         android:autofillHints="name" />
 
     <EditText
         android:id="@+id/university_input"
-        style="@style/FormEditText"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:hint="@string/university_hint"
         android:inputType="text"
         android:autofillHints="organization" />
 
     <EditText
         android:id="@+id/id_input"
-        style="@style/FormEditText"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:hint="@string/id_hint"
         android:inputType="text"
         android:autofillHints="username" />
 
     <EditText
         android:id="@+id/grade_input"
-        style="@style/FormEditText"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:hint="@string/grade_hint"
         android:inputType="text" />
 
@@ -41,4 +47,4 @@
         android:text="@string/submit"
         android:textSize="16sp" />
 
-</FrameLayout>
+</LinearLayout>
