--- a/Fragments/app/src/main/res/layout-land/fragment_teacher_form.xml
+++ b/Fragments/app/src/main/res/layout-land/fragment_teacher_form.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
@@ -7,25 +7,32 @@
 
     <EditText
         android:id="@+id/name_input"
-        style="@style/FormEditText"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:hint="@string/name_hint"
-        android:inputType="textPersonName" />
+        android:inputType="textPersonName"
+        android:autofillHints="name" />
 
     <EditText
         android:id="@+id/university_input"
-        style="@style/FormEditText"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:hint="@string/university_hint"
-        android:inputType="text" />
+        android:inputType="text"
+        android:autofillHints="organization" />
 
     <EditText
         android:id="@+id/id_input"
-        style="@style/FormEditText"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:hint="@string/id_hint"
-        android:inputType="text" />
+        android:inputType="text"
+        android:autofillHints="username" />
 
     <EditText
         android:id="@+id/course_input"
-        style="@style/FormEditText"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:hint="@string/course_hint"
         android:inputType="text" />
 
@@ -37,5 +44,4 @@
         android:layout_marginTop="16dp"
         android:text="@string/submit"
         android:textSize="16sp" />
-
-</FrameLayout>
+</LinearLayout>
